# torch-scratchpad

./: .gitignore  CMakeLists.txt  scratchpad.cpp
